--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,10 +5,6 @@ html, body{
     height: 100;
 }
 
-#about{
-  margin: 20px;
-}
-
 ul {
 display: flex;
 list-style-type: none;
@@ -19,7 +15,13 @@ overflow: hidden;
 background-color: #333;
 }
 
-nav ul li img {
+#navbar {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
+.nav ul li img {
   width: 20px;
   height: 20px;
   vertical-align: middle;
@@ -40,10 +42,10 @@ text-decoration: none;
 }
 
 li a:hover:not(.active) {
-background-color: #111;
+background-color: #525252;
 }
 
-#form{
+.form, table{
+  border-radius: 50%;
   margin:20px;
-  align-items:flex-end;
 }
